Stuck Header on top; Fixed CSS

--- a/event_manager/static/css/em_nav.css
+++ b/event_manager/static/css/em_nav.css
@@ -1,5 +1,6 @@
 .nav_ul {
   list-style-type: none;
+  margin-top: 0;
   margin-bottom: 0;
   padding: 0;
   overflow: hidden;
