--- a/event_manager/static/css/entry_management.css
+++ b/event_manager/static/css/entry_management.css
@@ -1,3 +1,8 @@
+body
+{
+    margin: 0;
+}
+
 .button {
   background-color: #4CAF50; /* Green */
   border: none;
